Bug #15924 Core dump in sp_trans (non-released version)
Submitted: 22 Dec 2005 3:30 Modified: 5 Jan 2006 18:08
Reporter: Lars Thalmann
Status: Closed
Category:Server: Replication Severity:S1 (Critical)
Version:mysql-5.1-wl1012-v3 OS:Linux (FC4 AMD64)
Assigned to: Mats Kindahl Target Version:

[22 Dec 2005 3:30] Lars Thalmann
Description:
Core dump when running test suite.

(gdb) bt
#0  0x0000003f05e096a7 in pthread_kill () from /lib64/libpthread.so.0
#1  0x00000000006c61a4 in write_core (sig=6) at stacktrace.c:220
#2  0x00000000005ae798 in handle_segfault (sig=6) at mysqld.cc:2145
#3  <signal handler called>
#4  0x0000003f0552f3b0 in raise () from /lib64/libc.so.6
#5  0x0000003f05530860 in abort () from /lib64/libc.so.6
#6  0x0000003f055283eb in __assert_fail () from /lib64/libc.so.6
#7  0x0000000000634373 in binlog_savepoint_set (thd=0x1b56718, sv=0x1bcd580) at
log.cc:247
#8  0x0000000000672684 in ha_savepoint (thd=0x1b56718, sv=0x1bcd538) at handler.cc:1097
#9  0x00000000005c71c1 in mysql_execute_command (thd=0x1b56718) at sql_parse.cc:4074
#10 0x00000000006d925a in sp_instr_stmt::exec_core (this=0x1b29550, thd=Variable "thd" is
not available.
) at sp_head.cc:2259
#11 0x00000000006d9d8d in sp_lex_keeper::reset_lex_and_exec_core (this=0x1b29590,
thd=0x1b56718, nextp=0x4519fa04, open_tables=false, instr=0x1b29550) at sp_head.cc:2133
#12 0x00000000006df61c in sp_instr_stmt::execute (this=0x1b29550, thd=0x1b56718,
nextp=0x4519fa04) at sp_head.cc:2207
#13 0x00000000006dcf3e in sp_head::execute (this=0x1b28f18, thd=0x1b56718) at
sp_head.cc:1039
#14 0x00000000006dead0 in sp_head::execute_function (this=0x1b28f18, thd=0x1b56718,
argp=Variable "argp" is not available.
) at sp_head.cc:1278
#15 0x000000000053ce95 in Item_func_sp::execute_impl (this=0x1b54288, thd=0x1b56718,
return_value_fld=0x1b555a8) at item_func.cc:4798
#16 0x0000000000541f4d in Item_func_sp::execute (this=0x1b54288, flp=0x1b54350) at
item_func.cc:4758
#17 0x0000000000546a4a in Item_func_sp::val_int (this=0x1b54288) at item_func.h:1405
#18 0x000000000052003e in Item::save_in_field (this=0x1b54288, field=0x1b2dca0,
no_conversions=false) at item.cc:4034
#19 0x00000000005eb1d9 in fill_record (thd=0x1b56718, ptr=0x1b2dc98, values=Variable
"values" is not available.
) at sql_base.cc:5690
#20 0x00000000005eb260 in fill_record_n_invoke_before_triggers (thd=0x1b56718,
ptr=Variable "ptr" is not available.
) at sql_base.cc:5728
#21 0x000000000061ec9d in mysql_insert (thd=0x1b56718, table_list=Variable "table_list" is
not available.
) at sql_insert.cc:481
#22 0x00000000005c544f in mysql_execute_command (thd=0x1b56718) at sql_parse.cc:3259
#23 0x00000000005c9614 in mysql_parse (thd=0x1b56718, inBuf=0x1b53c58 "insert into t1
values (1), (bug13825_5(2)), (3)", length=Variable "length" is not available.
) at sql_parse.cc:5634
#24 0x00000000005c9d4a in dispatch_command (command=COM_QUERY, thd=0x1b56718,
packet=0x1b48c29 "insert into t1 values (1), (bug13825_5(2)), (3)", packet_length=48)
    at sql_parse.cc:1708
#25 0x00000000005cae60 in do_command (thd=0x1b56718) at sql_parse.cc:1509
#26 0x00000000005cbaee in handle_one_connection (arg=Variable "arg" is not available.
) at sql_parse.cc:1152
#27 0x0000003f05e0697c in start_thread () from /lib64/libpthread.so.0
#28 0x0000003f055c9c2e in clone () from /lib64/libc.so.6
#29 0x0000000000000000 in ?? ()

How to repeat:
- sp_trans.test
- RBR mode
[4 Jan 2006 22:16] Mike Hillyer
Developer: Need more information, what version this was fixed in, what to state in
changelog entry. If this bug appeared and disappeared in a non-release version perhaps
close it with no changelog entry.
[5 Jan 2006 12:57] Lars Thalmann
This bug did not affect any official release since it was part of RBR.
I don't think it needs to be documentated further.
[5 Jan 2006 18:08] Mike Hillyer
Closing it then.