Bug#15924 (Core dump in sp_trans):   Added code for pending event flush just before executing the   function or trigger.

mysql-test/t/disabled.def:
  Enabling sp_trans test.
sql/log.cc:
  Reorganizing/simplifying code.
sql/sql_class.cc:
  Added code to flush pending event before executing a function/trigger.